--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,15 +9,17 @@ on:
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
+
 jobs:
   build:
-
     strategy:
       fail-fast: false
       matrix:
         os: ["ubuntu-24.04", "ubuntu-22.04"]
         python: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
-    runs-on:  ${{ matrix.os }}
+
+    runs-on: ${{ matrix.os }}
+
     steps:
     - uses: actions/checkout@v4
 
@@ -26,20 +28,39 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
 
-    - name: Install System Dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libxml2-dev libxmlsec1-dev libxmlsec1-openssl pkg-config
+        sudo apt-get install -y \
+          swig \
+          xmlsec1 \
+          libengine-pkcs11-openssl \
+          libsofthsm2 \
+          softhsm2 \
+          opensc
+        sudo mkdir -p /var/lib/softhsm/tokens
+
+    - name: Initialize SoftHSM2 token
+      run: |
+        mkdir -p ~/.config/softhsm2
+        echo "directories.tokendir = /var/lib/softhsm/tokens" > ~/.config/softhsm2/softhsm2.conf
+        sudo softhsm2-util --init-token --slot 0 --label "test" --pin 1234 --so-pin 1234
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pykcs11 nose coveralls
+        pip uninstall -y xmlsec || true
+        pip install coveralls importlib_resources
+        pip install .[test]
 
     - name: Run coverage
       run: |
-        python -m coverage run --source=xmlsec setup.py nosetests -vv -d
-        
+        python -m coverage run --source=xmlsec -m nose2 -vv
+      env:
+        XMLSEC_SKIP_P11: "1"
+
     - name: Run coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         python -m coveralls
